--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -51,11 +51,29 @@ a {
     width: 50%;
 }
 
+#addLink {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .inputUser {
     display: flex;
     flex-direction: column;
     font-size: 2rem;
     padding: 1rem 0;
+}
+
+#link {
+    padding: 0.5rem 2rem;
+    border-radius: 0.5rem;
+    border: 0.1rem solid rgba(0, 0, 0, 0.38);
+}
+
+#submitLink {
+    padding: 0.25rem 1.5rem;
+    border-radius: 0.5rem;
+    border: 0.1rem solid rgba(0, 0, 0, 0.38);
 }
 
 #title {
