--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,6 +6,7 @@
 
 html {
     font-size: 62.5%;
+    font-family: sans-serif;
 }
 
 h1 {
@@ -64,7 +65,7 @@ a {
     padding: 1rem 0;
 }
 
-#link {
+#link, #titleLink {
     padding: 0.5rem 2rem;
     border-radius: 0.5rem;
     border: 0.1rem solid rgba(0, 0, 0, 0.38);
@@ -77,8 +78,104 @@ a {
 }
 
 #title {
-    font-size: 2.5rem;
+    font-size: 3rem;
     font-weight: bold;
     border: none;
     color: rgba(255, 0, 0, 0.77);
+}
+
+img {
+    width: 15rem;
+    height: 15rem;
+    border: 0.1rem solid rgba(0, 0, 0, 0.27);
+    padding: 2.5rem;
+    border-radius: 0.5rem 0.5rem 0 0;
+}
+
+#allLink {
+    margin: 2rem auto;
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.linkDisplay {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5rem;
+    margin: 0.5rem;
+}
+
+.linkDisplay > a:last-child {
+    border: none;
+    color: red;
+}
+
+.linkImage {
+    color: #F9F9F9;
+    width: 100%;
+    text-align: center;
+    border-radius: 0 0 0.5rem 0.5rem;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+#add {
+    font-size: 2.5rem;
+    margin-left: 1.5rem;
+}
+
+.infoUser {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 2.5rem 5rem;
+    font-size: 2rem;
+}
+
+#deleteAccount {
+    margin: 2.5rem 5rem;
+    padding: 0.5rem 1.5rem;
+    border-radius: 0.5rem;
+    background-color: red;
+    color: #F9F9F9;
+}
+
+.error, .success {
+    text-align: center;
+    padding: 1.5rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #F9F9F9;
+}
+
+.error {
+    background-color: indianred;
+}
+
+.success {
+    background-color: forestgreen;
+}
+
+@media screen and (max-width: 415px) {
+    #title {
+        font-size: 2.5rem;
+    }
+
+    #login, #profile {
+        padding: 0.5rem 1rem;
+        font-size: 1.5rem;
+        border-radius: 0.5rem;
+        background-color: rgba(255, 0, 0, 0.37);
+    }
+
+    #inscription, #logout {
+        padding: 0.5rem 1rem;
+        font-size: 1.5rem;
+        border-radius: 0.5rem;
+        background-color: rgba(0, 81, 255, 0.38);
+    }
 }
